--- a/index.html
+++ b/index.html
@@ -24,19 +24,10 @@
             --lowlight: var(--deep-blue);
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        @keyframes brushStroke {
-            0% { transform: scaleX(0); transform-origin: left; }
-            100% { transform: scaleX(1); transform-origin: left; }
-        }
-
-        @keyframes inkSpread {
-            0% { transform: scale(1); opacity: 0.7; }
-            100% { transform: scale(1.5); opacity: 0; }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
 
         body {
@@ -120,13 +111,12 @@
             justify-content: center;
             position: relative;
             overflow: hidden;
-            padding-top: 60px; /* Account for fixed nav */
+            padding-top: 60px;
         }
 
         .hero-content {
             text-align: center;
             z-index: 1;
-            animation: fadeIn 1s ease-out;
             max-width: 800px;
             padding: 0 2rem;
         }
@@ -135,6 +125,7 @@
             font-size: 3.5rem;
             margin-bottom: 1rem;
             color: var(--primary);
+            display: inline-block;
         }
 
         .hero p {
@@ -144,100 +135,64 @@
         }
 
         .typewriter {
+            overflow: hidden;
             border-right: 2px solid var(--primary);
             white-space: nowrap;
-            overflow: hidden;
-            animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
+            margin: 0 auto;
+            letter-spacing: 0.15em;
+            animation: 
+                typing 3.5s steps(30, end),
+                blink-caret .75s step-end infinite;
         }
 
         @keyframes typing {
             from { width: 0 }
-            to { width: 100% }
+            to { width: 435px }
         }
 
         @keyframes blink-caret {
             from, to { border-color: transparent }
-            50% { border-color: var(--primary) }
+            50% { border-color: var(--primary); }
         }
 
-        /* Timeline Section */
-        .timeline-container {
-            padding: 6rem 2rem;
-            background-color: var(--background);
-            position: relative;
-        }
-
-        .timeline {
-            position: relative;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .timeline::before {
-            content: '';
+        /* Dragon Background */
+        .dragon-background {
             position: absolute;
-            left: 50%;
-            width: 4px;
-            height: 100%;
-            background: linear-gradient(to bottom, var(--primary), var(--accent));
-            transform: translateX(-50%);
-        }
-
-        .timeline-entry {
-            margin: 4rem 0;
-            position: relative;
-            width: calc(50% - 30px);
-        }
-
-        .timeline-entry:nth-child(odd) {
+            top: 0;
             left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0;
+            pointer-events: none;
         }
 
-        .timeline-entry:nth-child(even) {
-            left: calc(50% + 30px);
+        .dragon-background svg {
+            width: 100%;
+            height: 100%;
         }
 
-        .entry-content {
-            background-color: rgba(255, 255, 255, 0.05);
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
-            transition: all 0.3s ease;
-            border-left: 4px solid var(--primary);
+        .dragon-curve {
+            animation: flowDragon 30s infinite ease-in-out;
         }
 
-        .entry-content:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+        @keyframes flowDragon {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(20px); }
         }
 
-        .timeline-entry::before {
-            content: '';
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            background-color: var(--primary);
-            border-radius: 50%;
-            top: 50%;
-            transform: translateY(-50%);
-            box-shadow: 0 0 0 4px rgba(0, 168, 107, 0.2);
-        }
-
-        .timeline-entry:nth-child(odd)::before {
-            right: -40px;
-        }
-
-        .timeline-entry:nth-child(even)::before {
-            left: -40px;
-        }
-
-        /* Skills Section */
-        .skills-container {
+        /* Sections */
+        section {
             padding: 6rem 2rem;
-            background-color: var(--background);
         }
 
+        .section-header {
+            text-align: center;
+            color: var(--primary);
+            font-size: 2.5rem;
+            margin-bottom: 4rem;
+        }
+
+        /* Skills Grid */
         .skills-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -291,42 +246,27 @@
 
         /* Contact Section */
         .contact-container {
-            padding: 6rem 2rem;
-            background-color: var(--background);
-        }
-
-        .contact-content {
-            max-width: 800px;
-            margin: 0 auto;
             text-align: center;
-        }
-
-        .contact-content h2 {
-            color: var(--primary);
-            font-size: 2.5rem;
-            margin-bottom: 2rem;
         }
 
         .social-links {
             display: flex;
             justify-content: center;
             gap: 2rem;
-            margin: 2rem 0;
+            margin-top: 2rem;
         }
 
         .social-link {
             color: var(--text);
             text-decoration: none;
-            padding: 1rem;
-            border-radius: 50%;
-            background-color: rgba(255, 255, 255, 0.05);
-            transition: all 0.3s ease;
-            position: relative;
             width: 60px;
             height: 60px;
+            border-radius: 50%;
+            background-color: rgba(255, 255, 255, 0.05);
             display: flex;
             align-items: center;
             justify-content: center;
+            transition: all 0.3s ease;
         }
 
         .social-link i {
@@ -337,34 +277,6 @@
             transform: translateY(-5px);
             background-color: var(--primary);
             color: var(--background);
-        }
-
-        .social-link::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            background-color: var(--primary);
-            opacity: 0;
-            transform: translate(-50%, -50%) scale(1.2);
-            transition: all 0.3s ease;
-            z-index: -1;
-        }
-
-        .social-link:hover::after {
-            opacity: 0.2;
-            transform: translate(-50%, -50%) scale(1.4);
-        }
-
-        /* Section Headers */
-        .section-header {
-            text-align: center;
-            margin-bottom: 4rem;
-            color: var(--primary);
-            font-size: 2.5rem;
         }
 
         /* Responsive Design */
@@ -381,23 +293,6 @@
                 font-size: 1.2rem;
             }
 
-            .timeline::before {
-                left: 30px;
-            }
-
-            .timeline-entry {
-                width: calc(100% - 60px);
-                left: 60px !important;
-            }
-
-            .timeline-entry::before {
-                left: -30px !important;
-            }
-
-            .timeline-entry:nth-child(even)::before {
-                left: -30px !important;
-            }
-
             .skills-grid {
                 grid-template-columns: 1fr;
             }
@@ -405,17 +300,22 @@
             .social-links {
                 flex-wrap: wrap;
             }
+
+            @keyframes typing {
+                from { width: 0 }
+                to { width: 315px }
+            }
         }
 
-        /* Particle Container */
-        #particles-js {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 0;
-            pointer-events: none;
+        @media (max-width: 480px) {
+            .hero h1 {
+                font-size: 2rem;
+            }
+
+            @keyframes typing {
+                from { width: 0 }
+                to { width: 252px }
+            }
         }
     </style>
 </head>
@@ -425,7 +325,6 @@
             <a href="#" class="nav-logo">Michael Chen</a>
             <div class="nav-links">
                 <a href="#home" class="nav-link">Home</a>
-                <a href="#timeline" class="nav-link">Timeline</a>
                 <a href="#skills" class="nav-link">Skills</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
@@ -433,30 +332,42 @@
     </nav>
 
     <section id="home" class="hero">
-        <div id="particles-js"></div>
+        <div class="dragon-background">
+            <svg viewBox="0 0 800 600" xmlns="http://www.w3.org/2000/svg">
+                <defs>
+                    <pattern id="dragon-scales" x="0" y="0" width="40" height="40" patternUnits="userSpaceOnUse">
+                        <path d="M0 20c5-10 15-10 20 0s15 10 20 0" 
+                              fill="none" 
+                              stroke="#00A86B" 
+                              stroke-width="0.5" 
+                              opacity="0.2"/>
+                    </pattern>
+                </defs>
+                <path class="dragon-curve" 
+                      d="M100,300 Q200,100 400,300 T700,300" 
+                      fill="none" 
+                      stroke="#00A86B" 
+                      stroke-width="1" 
+                      opacity="0.1"/>
+                <rect width="100%" height="100%" fill="url(#dragon-scales)" opacity="0.05"/>
+            </svg>
+        </div>
         <div class="hero-content">
             <h1 class="typewriter">Hi, I'm Michael Chen</h1>
             <p>A Computer Science major blending technology and creativity</p>
         </div>
     </section>
 
-    <section id="timeline" class="timeline-container">
-        <h2 class="section-header">My Journey</h2>
-        <div class="timeline">
-            <!-- Timeline entries will be dynamically added here -->
-        </div>
-    </section>
-
-    <section id="skills" class="skills-container">
+    <section id="skills">
         <h2 class="section-header">Skills & Expertise</h2>
         <div class="skills-grid">
             <!-- Skills will be dynamically added here -->
         </div>
     </section>
 
-    <section id="contact" class="contact-container">
-        <div class="contact-content">
-            <h2>Get in Touch</h2>
+    <section id="contact">
+        <div class="contact-container">
+            <h2 class="section-header">Get in Touch</h2>
             <div class="social-links">
                 <a href="mailto:michaelluochen1@gmail.com" class="social-link" title="Email">
                     <i class="fas fa-envelope"></i>
@@ -473,7 +384,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="data.js"></script>
     <script src="main.js"></script>
 </body>
